syntax="proto3";
option go_package = "/favorite;";

message UrlModel {
	int64  url_id = 1;
	string url = 2;
	string desc = 3;
}

message FavoriteResp {
	int64  favorite_id = 1;
	string favorite_name = 2;
	int64 user_id = 3;
	repeated UrlModel url_info=4;
}

message FavoriteCreateReq {
	// @inject_tag:form:"favorite_name" uri:"favorite_name"
	string favorite_name = 1;
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 2;
}

message FavoriteUpdateReq {
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 1;
	// @inject_tag:form:"favorite_id" uri:"favorite_id"
	int64 favorite_id = 2;
	// @inject_tag:form:"favorite_name" uri:"favorite_name"
	string favorite_name = 3;
}

message FavoriteListReq {
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 1;
	// @inject_tag:form:"favorite_id" uri:"favorite_id"
	int64 favorite_id = 2;
}

message FavoriteDeleteReq {
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 1;
	// @inject_tag:form:"favorite_id" uri:"favorite_id"
	int64 favorite_id = 2;
}

message FavoriteDetailCreateReq {
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 1;
	// @inject_tag:form:"favorite_id" uri:"favorite_id"
	int64 favorite_id = 2;
	// @inject_tag:form:"url_id" uri:"url_id"
	int64 url_id = 3;
	// @inject_tag:form:"url" uri:"url"
	string url = 4;
	// @inject_tag:form:"desc" uri:"desc"
	string desc = 5;
}

message FavoriteDetailListReq {
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 1;
	// @inject_tag:form:"favorite_id" uri:"favorite_id"
	int64 favorite_id = 2;
	// @inject_tag:form:"url_id" uri:"url_id"
	int64 url_id = 3;
}

message FavoriteDetailDeleteReq {
	// @inject_tag:form:"favorite_id" uri:"favorite_id"
	int64 favorite_id = 1;
	// @inject_tag:form:"favorite_detail_id" uri:"favorite_detail_id"
	int64 favorite_detail_id = 2;
	// @inject_tag:form:"user_id" uri:"user_id"
	int64 user_id = 3;
}

message FavoriteCommonResponse {
	int64 code = 1;
	string msg = 2;
	string data = 3;
	string error = 4;
}

message FavoriteDetailListResponse {
	int64 code = 1;
	repeated FavoriteResp items=2;
	int64 total = 3;
}

message FavoriteListItemResp{
	int64 favorite_id = 2;
	string favorite_name = 3;
}

message FavoriteListResponse {
	int64 code = 1;
	repeated FavoriteListItemResp items=2;
	int64 total = 3;
}

service FavoritesService{
	rpc FavoriteCreate(FavoriteCreateReq) returns(FavoriteCommonResponse);
	rpc FavoriteUpdate(FavoriteUpdateReq) returns(FavoriteCommonResponse);
	rpc FavoriteList(FavoriteListReq) returns(FavoriteListResponse);
	rpc FavoriteDelete(FavoriteDeleteReq) returns(FavoriteCommonResponse);
	rpc FavoriteDetailCreate(FavoriteDetailCreateReq) returns(FavoriteCommonResponse);
	rpc FavoriteDetailList(FavoriteDetailListReq) returns(FavoriteDetailListResponse);
	rpc FavoriteDetailDelete(FavoriteDetailDeleteReq) returns(FavoriteCommonResponse);
}
